# flang-openmp

./: CMakeLists.txt  main.f90
.github/workflows/: testing.yml
